samples/_failures_safe/1761044337_365b43_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_850f12ea.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_850f12ea.c:167:25: error: expected ‘;’ at end of input
  167 |                 return 0
      |                         ^
      |                         ;
./samples/SAFE/__tmp_850f12ea.c:167:17: error: expected declaration or statement at end of input
  167 |                 return 0
      |                 ^~~~~~
./samples/SAFE/__tmp_850f12ea.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_850f12ea.c:167:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_850f12ea.c:167:17: error: expected declaration or statement at end of input
